min-width for autosuggest to prevent it from shrinking too much, refs #12178

--- a/collective/patterns/widgets/static/widgets.css
+++ b/collective/patterns/widgets/static/widgets.css
@@ -1,10 +1,11 @@
 .select2-container{
-    margin:0;
+    margin:0 0 1em 0;
     position:relative;
     display:inline-block;
     zoom:1;
     *display:inline;
     vertical-align:middle;
+    min-width: 8em;
 }
 
 .select2-container,.select2-drop,.select2-search,.select2-search input{-webkit-box-sizing:border-box;
@@ -649,10 +650,6 @@ html[dir="rtl"] .select2-container-multi .select2-search-choice-close{
     background-position:100% -21px !important;
 }
 
-}
-
-.select2-container{
-    margin-bottom:1em;
 }
 
 .select2-container-multi .select2-choices .select2-choice-dragging{
